--- a/index.css
+++ b/index.css
@@ -1,45 +1,4 @@
-
-#mainContent {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: xx-large;
-	font-weight: bold;
-	background-color: #0095B6;
-	border-radius: 700px;
-	padding: 100px;
-	text-align: center;
-}
-.buttonStyle {
-	border-radius: 30px;
-	border: thin solid #F0E020;
-	padding: 5px;
-	background-color: #F8F094;
-	font-family: "Comic Sans", Tahoma, Geneva, Verdana, sans-serif;
-	font-weight: bold;
-	color: #663300;
-	width: 105px;
-}
-
-.buttonStyle:hover {
-	border: thin solid #000000;
-	background-color: #7FFFD4;
-	color: #996633;
-	cursor: pointer;
-}
-.buttonStyle:active {
-	border: thin solid #99CC00;
-	background-color: #FFFF00;
-	color: #0095B6;
-	cursor: pointer;
-}
-th, td {
-  font-family: 'sans-serif', sans-serif;
-  font-weight: 900;
-  padding: 20px;
-  text-align: left;
-  width: 33.3333%;
-}
-tr {
-  background: #46B2B2;
-  border-bottom: 8px solid #FFF;
-  margin-bottom: 5px;
+h1 {
+    color: red;
+    font-family: sans-serif;
 }
