--- a/style.css
+++ b/style.css
@@ -13,3 +13,21 @@ h2 {
 title {
     text-align: center;
 }
+ul {
+    position: center;
+}
+table {
+    margin: center;
+}
+
+div {
+    margin: auto;
+    padding-right: inherit
+    color: red;
+}
+.banner {
+  background-color: #4D00FF;
+  padding: 100px 0;
+  margin-top: 10px;
+  text-align: center;
+  
