--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ div {
     color: red;
 }
 .banner {
-  background-color: #4D00FF;
-  padding: 100px 0;
-  margin-top: 10px;
+  background-color: #D3D3D3;
+  padding: 120px 0;
+  margin-top: 77px;
   text-align: center;
   
