--- a/style.css
+++ b/style.css
@@ -1,26 +1,28 @@
-h1 {
+.h1 {
     color: green;
     font-family: sans-serif;
     text-align: left;
 }
 
-h2 {
-    font-family: sans-serif;
-    border: solid;
-    border-color: green;
-}
-
-title {
+.title {
     text-align: center;
 }
 
-table {
+.table {
     margin: center;
 }
 
 .banner {
   background-color: #D3D3D3;
-  padding: 120px 0;
-  margin-top: 77px;
-  text-align: center;
+  padding: 90px 0;
+  margin-top: 70px;
 }
+
+.image1 {
+    transform: rotate(90deg);
+}
+
+.image2 {
+    transform: rotate(270deg);
+}
+
